pushing some changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  
+  <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Nene</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -40,9 +40,10 @@
       </form>
     </div>
   </nav>
+</header>
   
 
-  <h1>about me</h1>
+  <h1>About Me</h1>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <img src="DSC07851.jpg" class="img-fluid" alt="Responsive image">
@@ -51,19 +52,44 @@
   
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <div class="container">
-        <p class="aboutme">
+        <article class="aboutme">
           Hows it going. my name is rene. This site will give you some
           insight into who i am. My whole life ive been facinated by
-          understanding how things work. Everything we see and interact
-          with was planned out and designed by some one. Thanks to my
-          A.D.D my curiostiy has never stopped and ive had quite a few
+          understanding how things work. Begenning with tering things apart,
+          and eventually rebuilding things and having a new understanding. 
+          Everything we see and interact with was planned out and designed by some one
+          who was curious, and that curiosity sometimes leads to prosperity. 
+          Thanks to my A.D.D my curiostiy has never stopped and ive had quite a few
           professions in my life. Understanding how websites work is
-          definitely lighting up the brain. I look forward to this rabbit
-          hole.
-        </p>
+          definitely lighting up the brain. I look forward to entering  this 
+          rabbit hole.
+        </article>
       </div>
     </div>
   </div>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="DSC00550.jpg" class="img-fluid" alt="Responsive image">   
+        </div>
+        <div class="col">
+          <img src="DSC02149.jpg" class="img-fluid" alt="Responsive image">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <img src="DSC01378.jpg" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col">
+          <img src="DSC09779.jpg" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col">
+          <img src="DSC04252.jpg" class="img-fluid" alt="Responsive image">
+        </div>
+      </div>
+    </div>
+  </section>
   <footer>
     <nav class="navbar fixed-bottom navbar-light bg-light">
       <a class="navbar-brand" href="#">Rene m Trevino</a>
