--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
     <title>Rene Michael Trevino</title>
 </head>
 <body>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Nene</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,6 +35,7 @@
           </form>
         </div>
       </nav>
+    </header>
 
     
     <h1>contacts</h1>
